# auth_user

./: .gitignore  README.md  pyproject.toml
auth-user/: .env-sample  main.py
auth-user/alembic/versions/: 2025_10_24_1409-acb06a2b1227_create_models.py
auth-user/api/: __init__.py  users.py
auth-user/api/services/: user_service.py
auth-user/core/: config.py  redis.py
auth-user/core/models/: __init__.py  base.py  db_helper.py  user.py
auth-user/core/schemas/: base_user.py  user.py
auth-user/scripts/: delete_user_in_db.py
